fix цветов expand collapse

--- a/spa/styl/partners/euroset/dp.search.result.styl
+++ b/spa/styl/partners/euroset/dp.search.result.styl
@@ -122,6 +122,13 @@
         a {
             color: #4d4d4d;
         }
+
+        &.w-expand-collapse-link_down {
+            color #fff;
+            a {
+                color #fff;
+            }
+        }
     }
     
     .icon-expand /*, .icon-collapse*/
